--- a/mixpanel.yaml
+++ b/mixpanel.yaml
@@ -14,4 +14,4 @@ sections:
           - required
     next: done
   
-end_date: 2025-12-31T23:59:59.999Z
+mixpanel: fffd6fab3138c0c0af6609cd986ece5e
