--- a/mixpanel.yaml
+++ b/mixpanel.yaml
@@ -1,5 +1,5 @@
 version: 1
-title: "End Date Example"
+title: "Mixpanel Example"
 description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dignissim orci eget risus tincidunt ultrices."
 
 sections:
